user update profile swagger
